--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Joshua Jones",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "node-random-name": "^1.0.1",
     "pg": "^8.7.1"
   },
   "devDependencies": {
